@@ -10,6 +10,7 @@
         <!-- Production mode by default - No expiration of conf and impl artifacts. -->
         <cache name="entity.definition" expire-time-idle="0" expire-time-live="0" max-elements="0"/>
         <cache name="entity.location" expire-time-idle="0" expire-time-live="0" max-elements="0"/>
+        <cache name="entity.tables.checked" expire-time-idle="0" expire-time-live="0" max-elements="0"/>
 
         <cache name="service.location" expire-time-idle="0" expire-time-live="0" max-elements="0"/>
         <cache name="service.java.class" expire-time-idle="0" expire-time-live="0" max-elements="0"/>
@@ -329,8 +330,8 @@
                   join-style="ansi-no-parenthesis"
                   drop-fk-use-foreign-key-keyword="true"
                   table-engine="InnoDB"
-                  character-set="latin1"
-                  collate="latin1_general_cs"
+                  character-set="utf8"
+                  collate="utf8_general_cs"
                   default-isolation-level="ReadCommitted"
                   default-jdbc-driver="com.mysql.jdbc.Driver"
                   default-test-query="SELECT 1">
