@@ -42,6 +42,7 @@ This release includes:
   - Entity audit-logging
   - Entity field encryption
   - Entity ECA rules
+  - Automatically add columns if missing in table check
 
 Notable features not yet implemented:
 
@@ -62,7 +63,8 @@ Notable features not yet implemented:
   - Service async/scheduled max-retry in Quartz
 - Entity Facade
   - Entity complex aliases in views
-  - Database meta-data support for adding columns, fks, indexes
+  - Database meta-data support for fks, indexes
+  - Database meta-data check/report against entity definitions
 - ArtifactExecutionFacade for artifact stack tracking
 - Artifact Authorization, Tar-pitting based on configuration in db
 - ServerHit and ServerHitBin tracking
